/api/news/trending endpoint